@@ -38,6 +38,7 @@ cache, give a prefix argument with C-u before using the command.
 \\[erl-find-source-under-point]		- Jump from a function call to its definition.
 \\[erl-find-source-unwind]		- Jump back from a function definition (multi-level).
 \\[erl-eval-expression]	- Evaluate an erlang expression from the minibuffer.
+\\[erl-reload-module]	- Reload an Erlang module.
 \\[fprof]	- Profile (with fprof) an expression from the minibuffer.
 \\[edb-toggle-interpret]	- Toggle debug interpreting of the module.
 \\[edb-toggle-breakpoint]	- Toggle a debugger breakpoint at the current line.
@@ -60,6 +61,7 @@ sequence. For general information about Emacs' online help, use
     ("\C-c\C-db" . edb-toggle-breakpoint)
     ("\C-c\C-dm" . edb-monitor)
     ("\C-c\C-d:" . erl-eval-expression)
+    ("\C-c\C-dL" . erl-reload-module)
     ("\C-c\C-dp" . fprof)
     ("\C-c\C-d." . erl-find-source-under-point)
     ("\C-c\C-d," . erl-find-source-unwind)
